# chat_shell_101

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  todo.md
chat_shell_101/: agent.py  cli.py
chat_shell_101/agent/: agent.py  builder.py  config.py
chat_shell_101/api/: routes.py  schemas.py  sse.py
chat_shell_101/streaming/: __init__.py
chat_shell_101/tools/: __init__.py  base.py  registry.py
doc/: PRD_v0.1.md  epic_phase_0.md  product_vision.md
doc/adr/: 001-epic-1-core-agent-system.md  002-epic-2-multi-model-llm-integration.md  004-epic-4-deployment-modes.md  005-epic-5-streaming-response-system.md  006-epic-6-storage-layer.md
examples/: 01_basic_usage.py  02_tools_and_calculator.py  03_storage_backends.py  04_custom_tools.py  05_streaming_advanced.py  06_configuration.py  07_api_server.py  README.md  __init__.py  advanced_config.py  basic_usage.py  integration_test.py
src/: config.py
src/storage/: __init__.py  interfaces.py
src/tools/: calculator.py
tests/: conftest.py
tests/streaming/: test_buffer.py  test_core.py  test_emitter.py  test_events.py  test_state.py
tests/unit/test_storage/: test_json_storage.py  test_memory_storage.py
