[project]
name = "chat-shell-101"
version = "0.1.0"
description = "Simplified CLI chat tool with LangGraph and OpenAI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chat Shell Team"},
]

dependencies = [
    "click>=8.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "langgraph>=0.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
chat-shell = "chat_shell_101.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]